Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -988,13 +988,13 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(uniquetravelcities)"
+    "type(unique_travel_cities)"
    ]
   },
   {
